Tutorial: fix invalid key in filter

--- a/data/campaigns/tutorial/scenarios/02_Tutorial_part_2.cfg
+++ b/data/campaigns/tutorial/scenarios/02_Tutorial_part_2.cfg
@@ -632,7 +632,9 @@ A full list of abilities and weapons specials, along with traits, may be found i
     [event]
         name=moveto
         [filter]
-            terrain=Ww
+            [filter_location]
+                terrain=Ww
+            [/filter_location]
             side=1
         [/filter]
 
