UtBS S9: Rewrite humans' retreat event

--- a/data/campaigns/Under_the_Burning_Suns/scenarios/09_Blood_is_Thicker_Than_Water.cfg
+++ b/data/campaigns/Under_the_Burning_Suns/scenarios/09_Blood_is_Thicker_Than_Water.cfg
@@ -671,17 +671,12 @@
                     speaker=Darius
                     message= _ "Curse them! The elves have freed the merfolk. We will be have our vengeance. Keep fighting, and execute plan C!"
                 [/message]
-                [fire_event]
-                    name=retreat_darius_alive
-                [/fire_event]
             [/then]
-            [else]
-                [fire_event]
-                    name=retreat_darius_dead
-                [/fire_event]
-            [/else]
         [/if]
 
+        [fire_event]
+            name=human_retreat
+        [/fire_event]
         [fire_event]
             name=eloh_appears
         [/fire_event]
@@ -1493,18 +1488,12 @@
                             # wmllint: local spelling stinkin'
                             message= _ "The stinkin’ elves have freed some of the merfolk. And still they fight on. Execute plan B. And kill those merfolk!"
                         [/message]
-
-                        [fire_event]
-                            name=retreat_darius_alive
-                        [/fire_event]
                     [/then]
-                    [else]
-                        [fire_event]
-                            name=retreat_darius_dead
-                        [/fire_event]
-                    [/else]
                 [/if]
 
+                [fire_event]
+                    name=human_retreat
+                [/fire_event]
                 [fire_event]
                     name=eloh_appears
                 [/fire_event]
@@ -1513,20 +1502,59 @@
     [/event]
 
     [event]
-        name=retreat_darius_alive
+        name=human_retreat
 
-        [message]
-            speaker=Darius
-            message= _ "I must go report to the Iron Council. Keep fighting!"
-        [/message]
-        [store_unit]
-            [filter]
+        [if]
+            [have_unit]
                 id=Darius
-            [/filter]
+            [/have_unit]
+            [then]
+                [message]
+                    speaker=Darius
+                    message= _ "I must go report to the Iron Council. Keep fighting!"
+                [/message]
+                [store_unit]
+                    [filter]
+                        id=Darius
+                    [/filter]
 
-            kill=yes
-            variable=stored_Darius
-        [/store_unit]
+                    kill=yes
+                    variable=stored_Darius
+                [/store_unit]
+            [/then]
+            [else]
+               # introduce new necromancer triad member
+
+                [remove_shroud]
+                    x=13-17
+                    y=26-30
+                    side=1
+                [/remove_shroud]
+
+                {NAMED_NOTRAIT_UNIT 4 (Necromancer) 15 28 (Hekuba) ( _ "Hekuba")}
+                [+unit]
+                    random_gender=no
+                [/unit]
+
+                [message]
+                    speaker=Hekuba
+                    message= _ "Curse them! The elves have stolen our offering to the Lady. We will have our vengeance. Keep fighting and execute plan C!"
+                [/message]
+                [kill]
+                    id=Hekuba
+                    animate=no
+                    fire_event=no
+                [/kill]
+                [message]
+                    speaker=Nym
+                    message= _ "Who was that?"
+                [/message]
+                [message]
+                    race=merman
+                    message= _ "That was one of the Iron Triad. Rarely do they leave their sanctuary. They prefer to let their minions do the dirty work."
+                [/message]
+            [/else]
+        [/if]
         [if]
             [have_unit]
                 id=Zelgant
@@ -1554,80 +1582,22 @@
                 [message]
                     speaker=Alastra
                     message= _ "I must leave for now, fight on in my stead."
+                    [show_if]
+                        [variable]
+                            name=stored_Darius.length
+                            equals=1
+                        [/variable]
+                    [/show_if]
                 [/message]
-                [store_unit]
-                    [filter]
-                        id=Alastra
-                    [/filter]
-
-                    kill=yes
-                    variable=stored_Alastra
-                [/store_unit]
-            [/then]
-        [/if]
-    [/event]
-
-    [event]
-        name=retreat_darius_dead
-
-        # introduce new necromancer triad member
-
-        [remove_shroud]
-            x=13-17
-            y=26-30
-            side=1
-        [/remove_shroud]
-
-        {NAMED_NOTRAIT_UNIT 4 (Necromancer) 15 28 (Hekuba) ( _ "Hekuba")}
-        [+unit]
-            random_gender=no
-        [/unit]
-
-        [message]
-            speaker=Hekuba
-            message= _ "Curse them! The elves have stolen our offering to the Lady. We will have our vengeance. Keep fighting and execute plan C!"
-        [/message]
-        [kill]
-            id=Hekuba
-            animate=no
-            fire_event=no
-        [/kill]
-        [message]
-            speaker=Nym
-            message= _ "Who was that?"
-        [/message]
-        [message]
-            race=merman
-            message= _ "That was one of the Iron Triad. Rarely do they leave their sanctuary. They prefer to let their minions do the dirty work."
-        [/message]
-
-        [if]
-            [have_unit]
-                id=Zelgant
-            [/have_unit]
-            [then]
-                [message]
-                    speaker=Zelgant
-                    message= _ "I go to marshal reinforcements. Do not lose heart, we will crush these puny elves."
-                [/message]
-                [store_unit]
-                    [filter]
-                        id=Zelgant
-                    [/filter]
-
-                    kill=yes
-                    variable=stored_Zelgant
-                [/store_unit]
-            [/then]
-        [/if]
-        [if]
-            [have_unit]
-                id=Alastra
-            [/have_unit]
-            [then]
                 [message]
                     speaker=Alastra
                     message= _ "I must go report to the Iron Council. Keep fighting!"
+                    [show_if]
+                        [variable]
+                            name=stored_Darius.length
+                            equals=0
+                        [/variable]
+                    [/show_if]
                 [/message]
                 [store_unit]
                     [filter]
