UtBS S12: Use [repeat] tag where possible
Also remove some commented out lines

--- a/data/campaigns/Under_the_Burning_Suns/scenarios/12_The_Final_Confrontation.cfg
+++ b/data/campaigns/Under_the_Burning_Suns/scenarios/12_The_Final_Confrontation.cfg
@@ -1008,20 +1008,15 @@
         name=new turn
         first_time_only=no
 
-        {VARIABLE i 0}
-        [while]
-            [variable]
-                name=i
-                less_than=$number_minions_to_spawn
-            [/variable]
+        [repeat]
+            times=$number_minions_to_spawn
+
             [do]
                 [fire_event]
                     name=create_minion
                 [/fire_event]
-                {VARIABLE_OP i add 1}
             [/do]
-        [/while]
-        {CLEAR_VARIABLE i}
+        [/repeat]
     [/event]
 
     # Event 3: Central Body heals fully each turn
@@ -1057,13 +1052,6 @@
             name=temp
             value=$stored_alien.hitpoints
         [/set_variable]
-
-        #        [modify_unit]
-        #            [filter]
-        #                type=Central Body
-        #            [/filter]
-        #            hitpoints=$this_unit.max_hitpoints
-        #        [/modify_unit]
 
         [if]
             [variable]
