DiD S11: dialogue and cutscene tweaks and buff ritual runes

--- a/data/campaigns/Descent_Into_Darkness/scenarios/11_Descent_into_Darkness.cfg
+++ b/data/campaigns/Descent_Into_Darkness/scenarios/11_Descent_into_Darkness.cfg
@@ -22,7 +22,7 @@
             {STORYTXT_BACKGROUND book.jpg}
         [/part]
         [part]
-            story= _ "Malin closes the book. After all this time and all that he has struggled for, could he just surrender to despair and perish? Still, the words, that terrifying idea, stick in the back of his mind. Life has offered him nothing; could death be any worse? Death... and not rebirth, but undeath."
+            story= _ "Malin closes the book. After all this time and all that he has struggled for, could he just surrender to despair and perish? Could he... would he just give up, just like that? Still, the words, that terrifying idea, stick in the back of his mind. Life has offered him nothing; could death be any worse? Death... and not rebirth, but undeath."
             {STORYTXT_BACKGROUND book.jpg}
         [/part]
         [part]
@@ -30,11 +30,11 @@
             {STORYTXT_BACKGROUND travel.jpg}
         [/part]
         [part]
-            story= _ "Malin soon finds the track of an enormous orc army and follows them until he reaches their camps. As he sees the number of orcs, he begins to realize the futility of his quest — harassing and harrying one clan of orcs is a far different task than harming them in any significant way. Then again, perhaps he is beyond the point of ordinary reason."
+            story= _ "Malin soon finds the track of an enormous orc army and follows them until he reaches their camps. As he sees the number of orcs, he begins to realize the futility of his quest — harassing and harrying one clan of orcs is a far different task than waging a truly meaningful war against them as a whole. Then again, perhaps he is beyond the point of ordinary reason."
             {STORYTXT_BACKGROUND end.jpg}
         [/part]
         [part]
-            story= _ "<i>There is nothing else left for me to do anyway,</i> Malin thinks, and rouses his undead to assault the camp. Within mere minutes, nearly his entire army is destroyed and he is badly injured by a poisoned dagger. Malin retreats and finds refuge in a small cave."
+            story= _ "<i>There is nothing else left for me to do anyway,</i> Malin thinks, and raises his undead to assault the camp. Within mere minutes, nearly his entire army is destroyed and he is badly injured by a poisoned dagger. Malin retreats and finds refuge in a small cave."
             {STORYTXT_BACKGROUND end.jpg}
         [/part]
     [/story]
@@ -373,7 +373,7 @@
 
         [message]
             speaker=Malin Keshar
-            message= _ "Everyone has betrayed me. I am alone."
+            message= _ "Everyone has betrayed me. I am alone. All that is left..."
         [/message]
 
         [delay]
@@ -711,7 +711,7 @@
                 description= _ "Death of Malin Keshar"
             [/objective]
             [note]
-                description= _ "While malin is standing on a runestone, he receives additional abilities"
+                description= _ "While Malin is standing on a runestone, he receives additional abilities"
             [/note]
         [/objectives]
     [/event]
@@ -838,7 +838,7 @@
 
         [message]
             speaker=Malin Keshar
-            message= _ "I remember a time when I thought skeletons were repulsive, sickening things. I suppose it is only natural for the living to fear the most prominent figure of death. Even if I grew out of such a naive thought... I suppose I could not have expected Drogan and Dela to follow suit so easily. My family and friends, yes, but simpletons. Would that they tried to understand me instead of shunning me outright."
+            message= _ "I remember a time when I thought skeletons were repulsive, sickening things. I suppose it is only natural for the living to fear the most prominent figure of death. Even if I grew out of such a naive thought... I suppose I could not have expected Drogan and Dela to follow suit so easily. My family and friends, yes, but they were nothing but simpletons. Would that they tried to understand me instead of shunning me outright."
         [/message]
 
         [message]
@@ -1043,12 +1043,12 @@
 
         [message]
             speaker=Malin Keshar
-            message= _ "Bah! Two can play that game. I have only ever fought to protect my people and my family, but the only thing I received in return was scorn and exile. My own sister would not listen to reason and support me. My people would rather feed themselves to orcs than follow my ‘sorcerous ways’. Drogan, Dela... all of them! They are the ones without souls, not me!"
+            message= _ "Bah! Two can play that game. I have only ever fought to protect my people and my family, but the only thing I received in return was scorn and exile. My own sister would not listen to me. My people would rather feed themselves to orcs than follow my ‘sorcerous ways’. Drogan, Dela... all of them! They are the ones without souls, not me!"
         [/message]
 
         [message]
             speaker=Malin Keshar
-            message= _ "I should not really care anymore. According to them, I have forsaken my soul already. So what does it matter anymore?"
+            message= _ "I should not really care anymore. According to them, I have forsaken my soul already. So what does it matter?"
         [/message]
 
         [message]
@@ -1222,7 +1222,7 @@
 
         [message]
             speaker=Malin Keshar
-            message= _ "Cold... it's so very cold. Not a biting chill, but a numbness, an emptiness, as if there is nothing left inside of me..."
+            message= _ "Cold... it’s so very cold. Not a biting chill, but a numbness, an emptiness, as if there is nothing left inside of me..."
         [/message]
     [/event]
 
@@ -1258,9 +1258,9 @@
                     [leadership]
                         name= _ "conscience"
                         name_inactive= _ "conscience"
-                        description= _ "This unit has its damage increased by 40%"
-                        description_inactive= _ "This unit has its damage increased by 40%"
-                        value=40
+                        description= _ "This unit has its damage increased by 50%"
+                        description_inactive= _ "This unit has its damage increased by 50%"
+                        value=50
                         affect_self=yes
                         affect_enemies=no
                         affect_allies=no
@@ -1309,11 +1309,11 @@
                     [resistance]
                         id=carapace
                         max_value=90
-                        add=35
+                        add=40
                         name= _ "carapace"
                         name_inactive= _ "carapace"
-                        description= _ "This unit gains 35% to all resistances."
-                        description_inactive= _ "This unit gains 35% to all resistances."
+                        description= _ "This unit gains 40% to all resistances."
+                        description_inactive= _ "This unit gains 40% to all resistances."
                         affect_self=yes
                         [filter]
                             id=Malin Keshar
@@ -1635,7 +1635,7 @@
         [unit]
             side=1
             x,y=3,34
-            hitpoints=17
+            hitpoints=19
             facing=se
             animate=yes
 
@@ -2500,7 +2500,7 @@
             speaker=narrator
             message= _ "<i>Dark water beneath crystal ice,
 Unmasked by a lick of flame,
-Transmuted by the alter of darkness
+Transmuted by the altar of darkness
 Into pitch black shadow.</i>"
             image=wesnoth-icon.png
         [/message]
@@ -2516,6 +2516,7 @@ Into pitch black shadow.</i>"
             message= _ "Someone left their experiment unfinished here."
         [/message]
     [/event]
+
 # coffin puzzle
 # Solution: pick up the key, move to the coffin to open it
 # then, pick up the bones, put them in the coffin
@@ -2729,7 +2730,7 @@ Into pitch black shadow.</i>"
 
                     [message]
                         speaker=narrator
-                        message= _ "Ash swirls upward, the charred remnants of the once living. Charcoal from bone, embers from flesh, he consumes the pallid cinders, siphoning away the energy with a draining touch."
+                        message= _ "Ash swirls upward, charred remnants of the once living. Charcoal from bone, embers from flesh, he consumes the pallid cinders, siphoning away the energy with a draining touch."
                         image=wesnoth-icon.png
                     [/message]
 
@@ -2879,6 +2880,10 @@ And the tongue of fire begets ashen repose.</i>"
 
         {REPLACE_SCENARIO_MUSIC silence.ogg}
 
+        [scroll_to]
+            x,y=17,7
+        [/scroll_to]
+
         [delay]
             time=2000
         [/delay]
@@ -2968,7 +2973,7 @@ And the tongue of fire begets ashen repose.</i>"
 
         [message]
             speaker=Xanthric
-            message= _ "<i><big>A derelict corpse like you has no business challenging a dragon! Even the lowly elementals will be more than a match for you. Rise, my thralls!</big></i>"
+            message= _ "<i><big>A derelict corpse like you has no business challenging a dragon! Even my lowly elementals will be more than a match for you. Rise, my thralls!</big></i>"
         [/message]
 
         [random_placement]
@@ -3102,6 +3107,7 @@ And the tongue of fire begets ashen repose.</i>"
     [event]
         name=moveto
         [filter]
+            x,y=17,7
             side=1
         [/filter]
         [filter_condition]
@@ -3414,7 +3420,7 @@ And the tongue of fire begets ashen repose.</i>"
 
         [message]
             speaker=Xanthric
-            message= _ "So... cold..."
+            message= _ "It is... so... cold..."
         [/message]
 
         [kill]
@@ -3504,6 +3510,10 @@ And the tongue of fire begets ashen repose.</i>"
             [/modifications]
             {IS_LOYAL}
         [/unit]
+
+        [delay]
+            time=500
+        [/delay]
 
         [message]
             speaker=Mal Keshar
